--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+## [0.2.1] - 2025-08-27
+### Added
+- Added new simple 3x3 pattern type: `[[1, 0, 0], [0, 0, 0], [0, 0, 0]]` and `[0, 0, 0], [0, 0, 0], [0, 0, 1]]`
+
 ## [0.2.0] - 2025-08-26
 ### Added
 - Using the [Nx](https://hexdocs.pm/nx) library to compute BDM for large 2D matrices (images) more efficiently
