Corrected README.md, removed BDM.Utils.normalize/2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
 - Replaced the placeholder CTM values with real ones
 ### Removed
 - Removed the incomplete implementation of the `:recursive` boundary condition
+- `Removed BDM.Utils.normalize/2`
 
 ## [0.2.1] - 2025-08-27
 ### Added
