--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,13 @@
+## [0.3.1] - 2025-08-29
+### Fixed
+- Added missing CTM values
+
 ## [0.3.0] - 2025-08-29
 ### Changed
 - Replaced the placeholder CTM values with real ones
 ### Removed
 - Removed the incomplete implementation of the `:recursive` boundary condition
-- `Removed BDM.Utils.normalize/2`
+- Removed `BDM.Utils.normalize/2`
 
 ## [0.2.1] - 2025-08-27
 ### Added
